// file: proto/gcommon/v1/common/types/auth_provider.proto
// version: 1.0.0
// guid: 7293f6cc-7049-493d-9e7c-b17f00dd8a76

edition = "2023";

package gcommon.v1.common.types;

import "google/protobuf/go_features.proto";
import "proto/gcommon/v1/common/enums/provider_type.proto";

option features.(pb.go).api_level = API_OPAQUE;
option go_package = "gcommon.v1.common.types";

/**
 * AuthProvider represents an external authentication provider configuration.
 * It defines the provider type and connection details used for authentication.
 */
message AuthProvider {
  // Unique provider identifier
  string id = 1;

  // Human readable provider name
  string name = 2;

  // Provider type (e.g., LDAP, OAUTH2, SAML)
  AuthProviderType type = 3;

  // Provider-specific configuration reference or JSON blob
  string config = 4;
}
